k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: clickenrent
  labels:
    name: clickenrent
    environment: production
